<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/seek_bar_pitch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_bar_pitch_text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:progress="50"
        app:layout_constraintStart_toEndOf="@+id/seek_bar_pitch_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar_pitch_text"/>

    <TextView
        android:id="@+id/seek_bar_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_bar_speed_text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_pitch_text" />

    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:progress="50"
        app:layout_constraintStart_toEndOf="@+id/seek_bar_pitch_text"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_pitch"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar_speed_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_to_speech_converter_header_image_description"
        android:src="@drawable/text_to_speech_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_speed_text" />

    <EditText
        android:id="@+id/text_to_convert_into_speech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:hint="@string/text_to_speech_converter_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/text_to_speech_converter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_to_speech_converter_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_to_speech_converter_stop_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>